--- a/SupportBank/SupportBank.csproj
+++ b/SupportBank/SupportBank.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Json.Net" Version="1.0.33" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
       <PackageReference Include="NLog" Version="6.0.5" />
     </ItemGroup>
 
